--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="#MaternalDetails">Maternal Details</a></li>
                         <li class="nav-item"><a class="nav-link" href="#JobDetails">Job Details</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#FamilyDetails">Family Details</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#">Family Details</a></li>
                         <!-- <li class="nav-item"><a class="nav-link" href="#experience">Experience</a></li> -->
                         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                     </ul>
@@ -69,7 +69,7 @@
                                             </ul>
                                         </nav>
                                     </div>
-                                    <div class="mt-3" data-aos="fade-up" data-aos-delay="200"><a class="btn btn-primary shadow-sm mt-1 hover-effect" href="#contact">Get In Touch <i class="fas fa-arrow-right"></i></a></div>
+
                                 </div>
                             </div>
                         </div>
@@ -83,71 +83,71 @@
                         <div class="col-md-6">
                             <h2 class="h4 my-2">Hello! I’m Kaushik Sutariya.</h2>
                             <div class="row mt-3">
-                                <div class="col-sm-2">
+                                <div class="col-sm-4">
                                     <div class="pb-1">Name:</div>
                                 </div>
-                                <div class="col-sm-10">
+                                <div class="col-sm-8">
                                     <div class="pb-1 fw-bolder">Kaushik Vasudevbhai Sutariya</div>
                                 </div>
 
-                                <div class="col-sm-2">
+                                <div class="col-sm-4">
                                     <div class="pb-1">DOB:</div>
                                 </div>
-                                <div class="col-sm-10">
+                                <div class="col-sm-8">
                                     <div class="pb-1 fw-bolder">01/10/1999</div>
                                 </div>
 
-                                <div class="col-sm-2">
+                                <div class="col-sm-4">
                                     <div class="pb-1">Time:</div>
                                 </div>
-                                <div class="col-sm-10">
+                                <div class="col-sm-8">
                                     <div class="pb-1 fw-bolder">11 :30 PM</div>
                                 </div>
-                                <div class="col-sm-2">
+                                <div class="col-sm-4">
                                     <div class="pb-1">Age:</div>
                                 </div>
-                                <div class="col-sm-10">
+                                <div class="col-sm-8">
                                     <div class="pb-1 fw-bolder">23 years</div>
                                 </div>
-                                <div class="col-sm-2">
+                                <div class="col-sm-4">
                                     <div class="pb-1">Education:</div>
                                 </div>
-                                <div class="col-sm-10">
+                                <div class="col-sm-8">
                                     <div class="pb-1 fw-bolder">BE in Computer Engineering(2021)</div>
                                 </div>
-                                <div class="col-sm-2">
+                                <div class="col-sm-4">
                                     <div class="pb-1">Language:</div>
                                 </div>
-                                <div class="col-sm-10">
+                                <div class="col-sm-8">
                                     <div class="pb-1 fw-bolder">Gujarati, Hindi, English</div>
                                 </div>
-                                <div class="col-sm-2">
+                                <div class="col-sm-4">
                                     <div class="pb-1">Mother Tongue:</div>
                                 </div>
-                                <div class="col-sm-10">
+                                <div class="col-sm-8">
                                     <div class="pb-1 fw-bolder">Gujarati</div>
                                 </div>
-                                <div class="col-sm-2">
+                                <div class="col-sm-4">
                                     <div class="pb-1">Weight:</div>
                                 </div>
-                                <div class="col-sm-10">
+                                <div class="col-sm-8">
                                     <div class="pb-1 fw-bolder">60KG</div>
                                 </div>
-                                <div class="col-sm-2">
+                                <div class="col-sm-4">
                                     <div class="pb-1">Height:</div>
                                 </div>
-                                <div class="col-sm-10">
+                                <div class="col-sm-8">
                                     <div class="pb-1 fw-bolder">5'5"</div>
                                 </div>
-                                <div class="col-sm-2">
+                                <div class="col-sm-4">
                                     <div class="pb-1">Hobbies:</div>
                                 </div>
-                                <div class="col-sm-10">
+                                <div class="col-sm-8">
                                     <div class="pb-1 fw-bolder">eSports</div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-5 offset-md-1" data-aos="fade-left" data-aos-delay="100"><img class="avatar img-fluid mt-2" src="images/avatar.jpg" width="400" height="400" alt="Walter Patterson" /></div>
+                        <div class="col-md-5 offset-md-1" data-aos="fade-left" data-aos-delay="100"><img class="avatar img-fluid mt-2" src="images/avatar.jpg" width="400" height="400" alt="Kaushik Sutariya" /></div>
                     </div>
                 </div>
             </div>
@@ -157,30 +157,30 @@
                         <h2 class="marker marker-center">Family Details</h2>
 
                         <div class="row mt-3">
-                            <div class="col-sm-2">
+                            <div class="col-sm-4">
                                 <div class="pb-1">Father Name:</div>
                             </div>
-                            <div class="col-sm-10">
+                            <div class="col-sm-8">
                                 <div class="pb-1 fw-bolder">Vasudevbhai Gangarambhai Sutariya</div>
                             </div>
 
-                            <div class="col-sm-2">
+                            <div class="col-sm-4">
                                 <div class="pb-1">Mother Name:</div>
                             </div>
-                            <div class="col-sm-10">
+                            <div class="col-sm-8">
                                 <div class="pb-1 fw-bolder">Bhagwatiben Vasudevbhai Sutariya</div>
                             </div>
 
-                            <div class="col-sm-2">
+                            <div class="col-sm-4">
                                 <div class="pb-1">Brother Name:</div>
                             </div>
-                            <div class="col-sm-10">
+                            <div class="col-sm-8">
                                 <div class="pb-1 fw-bolder">Pragnesh Vasudevbhai Sutariya</div>
                             </div>
-                            <div class="col-sm-2">
+                            <div class="col-sm-4">
                                 <div class="pb-1">Native Place:</div>
                             </div>
-                            <div class="col-sm-10">
+                            <div class="col-sm-8">
                                 <div class="pb-1 fw-bolder">Bajarda</div>
                             </div>
                         </div>
@@ -193,17 +193,17 @@
                         <h2 class="marker marker-center">Maternal Details</h2>
 
                         <div class="row mt-3">
-                            <div class="col-sm-2">
+                            <div class="col-sm-4">
                                 <div class="pb-1">Maternal:</div>
                             </div>
-                            <div class="col-sm-10">
+                            <div class="col-sm-8">
                                 <div class="pb-1 fw-bolder">Kalubhai Bhimabhai Devaiya</div>
                             </div>
 
-                            <div class="col-sm-2">
+                            <div class="col-sm-4">
                                 <div class="pb-1">Maternal Place:</div>
                             </div>
-                            <div class="col-sm-10">
+                            <div class="col-sm-8">
                                 <div class="pb-1 fw-bolder">Nagnesh</div>
                             </div>
                         </div>
@@ -216,22 +216,22 @@
                         <h2 class="marker marker-center">Job Details</h2>
                         <div class="centre">
                             <div class="row mt-3">
-                                <div class="col-sm-2">
+                                <div class="col-sm-4">
                                     <div class="pb-1">Occupation:</div>
                                 </div>
-                                <div class="col-sm-10">
+                                <div class="col-sm-8">
                                     <div class="pb-1 fw-bolder">Software Engineer (Back-end)</div>
                                 </div>
-                                <div class="col-sm-2">
+                                <div class="col-sm-4">
                                     <div class="pb-1">Company Name:</div>
                                 </div>
-                                <div class="col-sm-10">
+                                <div class="col-sm-8">
                                     <div class="pb-1 fw-bolder"><a href="https://www.scikey.ai/" target="_blank" rel="noopener noreferrer">SCIKEY</a></div>
                                 </div>
-                                <div class="col-sm-2">
+                                <div class="col-sm-4">
                                     <div class="pb-1">Job Location:</div>
                                 </div>
-                                <div class="col-sm-10">
+                                <div class="col-sm-8">
                                     <div class="pb-1 fw-bolder">Surat</div>
                                 </div>
 
@@ -269,22 +269,22 @@
                         <div class="col-md-6" data-aos="fade-left" data-aos-delay="300">
                             <div class="mt-3 px-1">
                                 <div class="h5">Let’s talk how I can help you!</div>
-                                <!-- <p>If you like my work and want to avail my services then drop me a message using the contact form. </p> -->
+                                 <p>If you like my work and want to avail my services then drop me a message using the contact form. </p> -->
             <!-- <p>Or get in touch using my email, skype or my contact number.</p> -->
             <!-- <p>See you!</p> -->
             <!-- </div> -->
             <!-- <div class="mt-53 px-1">
             <div class="row">
-                <div class="col-sm-2">
+                <div class="col-sm-4">
                     <div class="pb-1">Email:</div>
                 </div>
-                <div class="col-sm-10">
+                <div class="col-sm-8">
                     <div class="pb-1 fw-bolder">kaushiksutariya01@gmail.com</div>
                 </div>
-                <div class="col-sm-2">
+                <div class="col-sm-4">
                     <div class="pb-1">Phone:</div>
                 </div>
-                <div class="col-sm-10">
+                <div class="col-sm-8">
                     <div class="pb-1 fw-bolder">+91 70435-64118</div>
                 </div>
             </div>
@@ -293,7 +293,7 @@
     </div>
     </div>
     </div> -->
-            <footer class="pt-4 pb-4 text-center bg-light">
+            <footer class="pt-4 pb-4 text-center bg-light" id="contact">
                 <div class="container">
                     <div class="my-3">
                         <div class="h4">Kaushik Sutariya</div>
