--- a/index.html
+++ b/index.html
@@ -199,6 +199,12 @@
                             <div class="col-sm-8">
                                 <div class="pb-1 fw-bolder">Kalubhai Bhimabhai Devaiya</div>
                             </div>
+                            <div class="col-sm-4">
+                                <div class="pb-1">Mama:</div>
+                            </div>
+                            <div class="col-sm-8">
+                                <div class="pb-1 fw-bolder">Dineshbhai Kalubhai Devaiya</div>
+                            </div>
 
                             <div class="col-sm-4">
                                 <div class="pb-1">Maternal Place:</div>
